1527117754 | 10 files | M Protobufs/steamtours_clientmessages.proto,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libserver_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/scripts/contentdb.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/soundevents/destinations_props.vsndevts,  M tools/steamvr_environments/game/steamtours/steam.inf
https://steamdb.info/patchnotes/2884151/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
@@ -5659,12 +5659,14 @@ AvatarCustomizationItem #SliderThumb
 }
 
 .item_def_vive_headset,
+.item_def_vive_pro_headset,
 .ItemPhysicsProp.item_def_vive_logo_statue
 {
 	visibility: collapse;
 }
 
 .HMD_Manufacturer_HTC .AvatarsTab .item_def_vive_headset,
+.HMD_Manufacturer_HTC .AvatarsTab .item_def_vive_pro_headset,
 .HMD_Manufacturer_HTC .PropsOn .item_def_vive_logo_statue
 {
 	visibility: visible;
