1543000440 | 81 files | M bin/version.txt,  M content/panorama/localization/tenfoot_norwegian.txt,  M content/panorama/localization/tenfoot_romanian.txt,  M content/panorama/localization/tenfoot_russian.txt,  M content/panorama/localization/tenfoot_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.tx
https://steamdb.info/patchnotes/3335122/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/base_styles.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/base_styles.css
@@ -212,6 +212,12 @@
 	box-shadow: none;
 }
 
+.DestinationButton:disabled
+{
+	background-color: button_gradient;
+	border: 2px solid #ffffff20;
+}
+
 
 ClientUIDialogPanel {
 	width: 100%;
