1557880575 | 14 files | M bin/version.txt,  M resources/config/legacy_actions.json,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libserver_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/styles/welcome_panel.css,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/recent_apps.xml,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/tutorial.xml,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/recent_apps.css,  M tools/steamvr_environments/game/steamtours
https://steamdb.info/patchnotes/3824033/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/recent_apps.xml
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/recent_apps.xml
@@ -34,14 +34,16 @@
 			<Label class="WelcomeTitle" text="#Destinations_WelcomeText" />
 			<Panel class="TextArea">
 				<Label class="PressMenuButton" text="#FirstTimePanel_PressMenuButton" />
-				<Label class="PressBButton" text="#FirstTimePanel_PressBButton" />
+        <Label class="PressBOrYButton" text="#FirstTimePanel_PressBOrYButton" />
+        <Label class="PressBButton" text="#FirstTimePanel_PressBButton" />
 				<Label class="PressYButton" text="#FirstTimePanel_PressYButton" />
 			</Panel>
 			<Panel class="ImageRight">
 				<Image class="MotionController" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_png.vtex" />	
 				<Image class="TouchImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_touch_png.vtex" scaling="stretch-to-fit-preserve-aspect" />	
-				<Image class="WinMRImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_winmr_png.vtex" scaling="stretch-to-fit-preserve-aspect" />	
-				<Image class="Controller" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_controller_png.vtex" />	
+				<Image class="WinMRImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_winmr_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
+        <Image class="KnucklesImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_knuckles_png.vtex" />
+        <Image class="Controller" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_controller_png.vtex" />	
 				<Panel class="GlowAnim" />
 			</Panel>	
 		</Panel>
