--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/tutorial.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/tutorial.css
@@ -298,14 +298,15 @@
 .ViveHelp, 
 .ControllerHelp,
 .TouchHelp,
-.WinMRHelp
+.WinMRHelp,
+.KnucklesHelp
 {
 	visibility: collapse;
 }
 
 
 .ViveController .ViveHelp,
-.KnucklesController .ViveHelp,
+.KnucklesController .KnucklesHelp,
 .GenericTrackedController .ViveHelp,
 .GamepadController .ControllerHelp,
 .TouchController .TouchHelp,
