--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/styles/welcome_panel.css
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/styles/welcome_panel.css
@@ -21,22 +21,6 @@ DestinationsWelcomePanel {
 	margin-left: 50px;
 }
 
-.Destinations_Logo
-{
-	width: 80px;
-	height: 80px;
-	margin-left: 50px;
-	margin-top: 50px;
-}
-
-.Destinations_WelcomeText
-{
-	font-size: 40px;
-	color: white;
-	margin-top: 70px;
-	margin-left: 30px;
-}
-
 //
 // WELCOME STATE
 // First time players get the Welcome message asking them to open the menu
@@ -72,7 +56,9 @@ DestinationsWelcomePanel {
 
 .PressMenuButton,
 .PressYButton,
-.PressBButton {
+.PressBButton,
+.PressBOrYButton
+{
 	color: #ccccccff;
 	font-size: 30px;
 	font-weight: light;
@@ -84,7 +70,8 @@ DestinationsWelcomePanel {
 
 .MotionController,
 .Controller,
-.TouchImage 
+.TouchImage,
+.KnucklesImage
 {
 	visibility: collapse;
 }
@@ -99,7 +86,9 @@ DestinationsWelcomePanel {
 .GamepadController .Controller,
 .GamepadController .PressYButton,
 .TouchController .TouchImage,
-.TouchController .PressBButton
+.TouchController .PressBOrYButton,
+.KnucklesController .KnucklesImage,
+.KnucklesController .PressBButton
 {
 	visibility: visible;	
 }
@@ -108,7 +97,9 @@ DestinationsWelcomePanel {
 .GamepadController .MotionController,
 .GamepadController .PressMenuButton,
 .TouchController .MotionController,
-.TouchController .PressMenuButton
+.TouchController .PressMenuButton,
+.KnucklesController .MotionController,
+.KnucklesController .PressMenuButton
 {
 	visibility: collapse;	
 }
@@ -160,7 +151,8 @@ DestinationsWelcomePanel {
 
 .UpdateDesc,
 .UpdateDescController,
-.UpdateDescTouch {
+.UpdateDescTouch,
+.UpdateDescKnuckles {
 	text-align: left;
 	margin-top: 10px;
 	margin-left: 10px;
@@ -179,14 +171,16 @@ DestinationsWelcomePanel {
 
 // if it's a gamepad or a touch, show the relevant bits
 .GamepadController .UpdateDescController,
-.TouchController .UpdateDescTouch
+.TouchController .UpdateDescTouch,
+.KnucklesController .UpdateDescKnuckles
 {
 	visibility: visible;	
 }
 
 // if it's a gamepad or a touch, hide the irrelevant bits
 .GamepadController .UpdateDesc,
-.TouchController .UpdateDesc
+.TouchController .UpdateDesc,
+.KnucklesController .UpdateDesc
 {
 	visibility: collapse;	
 }
