--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/recent_apps.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/recent_apps.css
@@ -332,7 +332,9 @@ SteamToursRecentApps
 
 .PressMenuButton,
 .PressYButton,
-.PressBButton {
+.PressBButton,
+.PressBOrYButton
+{
 	color: #ccccccff;
 	font-size: 70px;
 	width: 900px;
@@ -347,7 +349,8 @@ SteamToursRecentApps
 .MotionController,
 .Controller,
 .TouchImage,
-.WinMRImage 
+.WinMRImage,
+.KnucklesImage
 {
 	width: 900px;
 	height: 900px;
@@ -366,9 +369,11 @@ SteamToursRecentApps
 .GamepadController .Controller,
 .GamepadController .PressYButton,
 .TouchController .TouchImage,
-.TouchController .PressBButton,
+.TouchController .PressBOrYButton,
 .WinMRController .WinMRImage,
-.WinMRControllerSamsung .WinMRImage
+.WinMRControllerSamsung .WinMRImage,
+.KnucklesController .KnucklesImage,
+.KnucklesController .PressBButton
 {
 	visibility: visible;	
 }
@@ -377,7 +382,9 @@ SteamToursRecentApps
 .GamepadController .MotionController,
 .GamepadController .PressMenuButton,
 .TouchController .MotionController,
-.TouchController .PressMenuButton
+.TouchController .PressMenuButton,
+.KnucklesController .MotionController,
+.KnucklesController .PressMenuButton
 {
 	visibility: collapse;	
 }
@@ -419,6 +426,12 @@ SteamToursRecentApps
 	height: 50px;
 	margin-top: 200px;
 	margin-right: 30px;
+}
+
+.KnucklesController .GlowAnim
+{
+	margin-bottom: 374px;
+	margin-right: 596px;
 }
 
 /*---------------------
