1560391140 | 48 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M resources/rendermodels/oculus_cv1_controller_left/oculus_cv1_controller_left.json,  M resources/rendermodels/oculus_cv1_controller_right/oculus_cv1_controller_right.json,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librenderingpipelines_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemempty_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libsteamaudio_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libhost_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libserver_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml,  M tools/steamvr_environments
https://steamdb.info/patchnotes/3913689/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml
@@ -41,6 +41,7 @@
 				<Panel class="ImageRight">
 					<Image class="MotionController" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_png.vtex" />	
 					<Image class="TouchImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_touch_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
+          <Image class="RiftSImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_rift_s_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
           <Image class="WinMRImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_winmr_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
           <Image class="KnucklesImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_knuckles_png.vtex" />
           <Image class="Controller" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_controller_png.vtex" />	
