--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/tutorial.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/tutorial.css
@@ -304,12 +304,12 @@
 	visibility: collapse;
 }
 
-
 .ViveController .ViveHelp,
 .KnucklesController .KnucklesHelp,
 .GenericTrackedController .ViveHelp,
 .GamepadController .ControllerHelp,
 .TouchController .TouchHelp,
+.RiftSController .TouchHelp,
 .WinMRController .WinMRHelp,
 .WinMRControllerSamsung .WinMRHelp
 {
@@ -337,6 +337,9 @@
 .TouchController .Page1 .NextButton,
 .TouchController .Page2 .NextButton,
 .TouchController .Page3 .DoneButton,
+.RiftSController .Page1 .NextButton,
+.RiftSController .Page2 .NextButton,
+.RiftSController .Page3 .DoneButton,
 .WinMRController .Page1 .NextButton,
 .WinMRController .Page2 .NextButton,
 .WinMRController .Page3 .DoneButton,
@@ -489,6 +492,7 @@
 #ControllerBottomText,
 .GamepadController #ViveBottomText,
 .TouchController #ViveBottomText,
+.RiftSController #ViveBottomText,
 .ViveController #TouchBottomText,
 .KnucklesController #TouchBottomText,
 .GamepadController #TouchBottomText
@@ -501,7 +505,8 @@
 	visibility: visible;
 }
 
-.TouchController #TouchBottomText
+.TouchController #TouchBottomText,
+.RiftSController #TouchBottomText
 {
 	visibility: visible;	
 }
