--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/vr_community_home.xml
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/vr_community_home.xml
@@ -62,7 +62,7 @@
 		</snippet>
 	</snippets>
 	
-	<ClientUIDialogPanel class="ScreenOn" onload="TurnWallOn();">
+	<ClientUIDialogPanel class="ScreenOn" onload="OnLoadMainPanel(); TurnWallOn();">
 
 		<Panel class="TutorialState">
 			<Image class="SteamVRLogo" src="s2r://panorama/images/content_browser/steamvr_home_logo_high_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
