1562978810 | 5 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css,  M tools/steamvr_environments/game/steamtours/steam.inf
https://steamdb.info/patchnotes/4008168/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
@@ -5642,6 +5642,7 @@ AvatarCustomizationItem #SliderThumb
 // special overrides
 .item_def_vive_controllers,
 .item_def_touch_controllers,
+.item_def_rift_s_controllers,
 .item_def_knuckles_controllers,
 .item_def_knuckles_ev1_3_controllers,
 .item_def_windowsmr_controllers,
