--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/base_styles.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/base_styles.css
@@ -84,7 +84,7 @@
 @define backgroundgray : #383635ff;
 @define foregroundgray : #A6A4A1ff;
 @define transparent: #00000000;
-@define platformfont: "Motiva Sans";
+@define platformfont: "Motiva Sans,Noto Sans JP Regular,Noto Sans KR Regular,Noto Sans SC Regular,Noto Sans TC Regular";
 @define deffontsize: 22px;
 @define medfontsize: 28px;
 @define largefontsize: 32px;
