1570591094 | 20 files | M bin/version.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librenderingpipelines_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemempty_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libserver_strings.txt,  M tools/steamvr_environments/game/steamtours/cfg/actions.json,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/styles/welcome_panel.css,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/recent_apps.xml,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/tutorial.xml,  M tools/steamvr_environments/game/s
https://steamdb.info/patchnotes/4272692/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml
@@ -12,6 +12,7 @@
 					<Label class="UpdateDescController" text="#WelcomePanel_UpdateDescController" />
 					<Label class="UpdateDescTouch" text="#WelcomePanel_UpdateDescTouch" />
           <Label class="UpdateDescKnuckles" text="#WelcomePanel_UpdateDescKnuckles" />
+          <Label class="UpdateDescCosmos" text="#WelcomePanel_UpdateDescCosmos" />
         </Panel>
 				<Panel class="Slideshow_Wrapper">
 					<Panel class="Slideshow">
@@ -44,6 +45,7 @@
           <Image class="RiftSImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_rift_s_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
           <Image class="WinMRImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_winmr_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
           <Image class="KnucklesImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_knuckles_png.vtex" />
+          <Image class="CosmosImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_cosmos_png.vtex" />
           <Image class="Controller" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_controller_png.vtex" />	
 				</Panel>	
 			</Panel>
