--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/recent_apps.xml
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/recent_apps.xml
@@ -44,6 +44,7 @@
         <Image class="RiftSImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_rift_s_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
         <Image class="WinMRImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_winmr_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
         <Image class="KnucklesImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_knuckles_png.vtex" />
+        <Image class="CosmosImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_cosmos_png.vtex" />
         <Image class="Controller" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_controller_png.vtex" />	
 				<Panel class="GlowAnim" />
 			</Panel>	
