1583365640 | 30 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_finnish.txt,  M content/vrmonitor/translations/vrmonitor_turkish.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/messageoverlay.js,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/notificationtoast.js,  M resources/webinterface/dashboard/progres
https://steamdb.info/patchnotes/4743972/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/steamvr_community_home.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/steamvr_community_home.css
@@ -548,8 +548,8 @@
 .ValveEnvironmentsDialog
 {
 	//width: 2340px;
-	//height: 1030px;`
-	width: 2600px;
+	//height: 1030px;
+	width: 2970px;
 	height: 1450px;
 	margin-bottom: 100px;
 	vertical-align: center;
